# rules_buildx

./: .gitattributes  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh
buildx/: BUILD.bazel  defs.bzl  dependencies.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
buildx/private/: BUILD.bazel  buildx_build.bzl  buildx_context.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
buildx/tests/: versions_test.bzl
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD.bazel  Dockerfile  MODULE.bazel  WORKSPACE.bazel
e2e/smoke/src/: say.py
