"buildx rules"

module(
    name = "rules_buildx",
    compatibility_level = 0,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.20.0")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "package_metadata", version = "0.0.5")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

buildx = use_extension("//buildx:extensions.bzl", "buildx")
buildx.toolchains()
use_repo(buildx, "buildx_configuration", "buildx_toolchains")

register_toolchains("@buildx_toolchains//:all")
